modified:   "01.JS\345\237\272\347\241\200/D01/code/C17.\351\232\220\345\274\217\350\275\254\346\215\242\345\222\214\346\230\276\345\274\217\350\275\254\346\215\242.html" 	modified:   "01.JS\345\237\272\347\241\200/D01/code/C18.\347\224\250\346\210\267\350\256\242\345\215\225\344\277\241\346\201\257\346\241\210\344\276\213.html" 	new file:   "01.JS\345\237\272\347\241\200/JS\345\237\272\347\241\200\346\200\273\347\273\223.md"

--- a/01.JS基础/D01/code/C18.用户订单信息案例.html
+++ b/01.JS基础/D01/code/C18.用户订单信息案例.html
@@ -8,18 +8,23 @@
   <style>
     h2 {
       text-align: center;
+      /* 文本居中 */
     }
 
     table {
-      /* 合并相邻边框 */
       border-collapse: collapse;
+      /* 合并相邻边框 */
       height: 80px;
+      /* 表格高度 */
       margin: 0 auto;
+      /* 居中 */
       text-align: center;
+      /* 文本居中 */
     }
 
     th {
       padding: 5px 30px;
+      /* 内边距 */
     }
 
     table,
