--- a/01.JS基础/D01/code/C17.隐式转换和显式转换.html
+++ b/01.JS基础/D01/code/C17.隐式转换和显式转换.html
@@ -26,19 +26,20 @@
     console.log(+'123');
     // 显式转换
     let str = '123'
+    //1. Number()
     console.log(Number(str));
     let num = prompt('输入年薪')
     console.log(Number(num));
-    let num2 = Number(prompt('输入年龄'))
+    let num2 = Number(prompt('输入年龄')) //prompt返回的是字符串
     // let num = +prompt('输入年薪')
-
+    //2. parseInt()
     console.log(parseInt('12px'));
     console.log(parseInt('12.34px'));
     console.log(parseInt('12.94px'));
-
+    //3. parseFloat()
     console.log(parseFloat('12.34px'));
     console.log(parseFloat('12.94px'));
-    console.log(parseFloat('abc12.94px'));
+    console.log(parseFloat('abc12.94px'));  // NaN
   </script>
 </body>
 
